Fixed overflow in navbar in small devices

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -419,5 +419,7 @@ video {
 		}
 	}
 }
-
+.flex-grow {
+	flex-grow: 1;
+}
 @import "./imports//media_query.scss";
